--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
   <input for="text" id="email-label"><br><br>
   <label for="number">Phone Number:</label><br>
   <input type="text" id="number-label"><br><br>
+  <label for="file">Upload Resume:</label>
+  <input type="file" id="myFile" name="filename"><br><br>
   <label for="message">Your Message</label><br>
   <textarea id="message" name="message"></textarea><br>
   <input id="submit" type="Submit" value="Submit">
